--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,4 @@
 [workspace]
-name = "postgres-rust"
-version = "18.dev"
 resolver = "2"
 
 members = [
@@ -8,3 +6,17 @@ members = [
     "guc",
     "parser",
 ]
+
+[workspace.package]
+edition = "2021"
+version = "0.1.0-18.dev"
+
+[workspace.dependencies]
+bitflags = "2.6.0"
+bitvec = "1.0.1"
+lazy_static = "1.5.0"
+phf = { version = "0.11.2", features = ["macros"] }
+
+postgres-basics = { path = "basics" }
+postgres-guc = { path = "guc" }
+postgres-parser = { path = "parser" }
