--- a/guc/Cargo.toml
+++ b/guc/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "postgres-guc"
-version = "0.1.0"
-edition = "2021"
+edition.workspace = true
+version.workspace = true
 
 [dependencies]
-postgres-basics = { path = "../basics" }
-bitflags = "2.6.0"
-lazy_static = "1.5.0"
+bitflags.workspace = true
+lazy_static.workspace = true
+postgres-basics.workspace = true
