--- a/scripts/Rakefile
+++ b/scripts/Rakefile
@@ -7,12 +7,39 @@ PG_ROOT = RUST_PROJECT_ROOT.parent / 'postgres'
 
 task default: :build
 
+###############################################################################
+# Keywords
+###############################################################################
 keywords_input = PG_ROOT / 'src/include/parser/kwlist.h'
 keywords_output = RUST_PROJECT_ROOT / 'parser/src/lexer/keyword/keywords.rs'
+
 CLEAN << keywords_output
-file keywords_output.to_s => keywords_input do | |
+
+file keywords_output => [keywords_input, 'gen-kws.rb'] do | |
   require_relative 'gen-kws.rb'
   KeywordsGenerator.run!(keywords_input, keywords_output)
 end
 
 task build: keywords_output
+
+
+###############################################################################
+# Error Codes (SQLSTATE)
+###############################################################################
+err_codes_input = PG_ROOT / 'src/backend/utils/errcodes.txt'
+err_codes_root = RUST_PROJECT_ROOT / 'basics/src/sql_state'
+err_codes_outputs = [
+  err_codes_root / 'enums.rs',
+  err_codes_root / 'variant_sets.rs'
+]
+
+CLEAN += err_codes_outputs
+
+err_codes_outputs.each do |output|
+  file output => [err_codes_input, 'gen-errcodes.rb'] do
+    require_relative 'gen-errcodes.rb'
+    ErrCodesGenerator.run!(err_codes_input, err_codes_root)
+  end
+end
+
+task build: err_codes_outputs
