Changed Rakefile to only generate errcodes once.

--- a/scripts/Rakefile
+++ b/scripts/Rakefile
@@ -36,10 +36,15 @@ err_codes_outputs = [
 CLEAN += err_codes_outputs
 
 err_codes_outputs.each do |output|
-  file output => [err_codes_input, 'gen-errcodes.rb'] do
-    require_relative 'gen-errcodes.rb'
-    ErrCodesGenerator.run!(err_codes_input, err_codes_root)
-  end
+  file output => [err_codes_input, 'gen-errcodes.rb']
 end
 
-task build: err_codes_outputs
+file err_codes_input => :build_err_codes
+file 'gen-errcodes.rb' => :build_err_codes
+
+task :build_err_codes do
+  require_relative 'gen-errcodes.rb'
+  ErrCodesGenerator.run!(err_codes_input, err_codes_root)
+end
+
+task build: :build_err_codes
