--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bitflags = "2"
 bitvec = "1"
 lazy_static = "1"
 phf = { version = "0.11", features = ["macros"] }
+thiserror = "1"
 
 postgres-basics = { path = "basics" }
 postgres-guc = { path = "guc" }
