--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ assert_matches = "1"
 bitflags = "2"
 bitvec = "1"
 lazy_static = "1"
-phf = { version = "0.11", features = ["macros"] }
+phf = { version = "0.11", features = ["macros", "unicase"] }
 thiserror = "1"
+unicase = "2"
 
 postgres-basics = { path = "basics" }
 postgres-guc = { path = "guc" }
