Const fn_info! macro, with hardcoded function names. Fixed consume! macro.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ assert_matches = "1"
 bitflags = "2"
 bitvec = "1"
 lazy_static = "1"
+test-case = "3"
 thiserror = "1"
 
 postgres-basics = { path = "basics" }
