--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 [dependencies]
 bitflags.workspace = true
 bitvec.workspace = true
+lazy_static.workspace = true
 thiserror.workspace = true
 postgres-basics.workspace = true
 
