--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -8,10 +8,9 @@ workspace = true
 
 [dependencies]
 bitvec.workspace = true
-thiserror.workspace = true
+elog.workspace = true
 postgres-basics.workspace = true
 postgres-parser-ast.workspace = true
-postgres-parser-error.workspace = true
 postgres-parser-lexer.workspace = true
 
 [dev-dependencies]
