--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -7,5 +7,6 @@ version.workspace = true
 workspace = true
 
 [dependencies]
-postgres-basics.workspace = true
 thiserror.workspace = true
+elog.workspace = true
+postgres-basics.workspace = true
