Introduced the derive_from crate, to replace the custom impl_from!

--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -8,6 +8,7 @@ workspace = true
 
 [dependencies]
 bitvec.workspace = true
+derive_more = { workspace = true, features = ["from"] }
 pg-ast.workspace = true
 pg-basics.workspace = true
 pg-elog.workspace = true
