--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ unused_imports = "deny"
 assert_matches = "1"
 bitflags = "2"
 bitvec = "1"
+derive_more = "2"
 lazy_static = "1"
 test-case = "3"
 thiserror = "2"
