--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 workspace = true
 
 [dependencies]
+derive_more = { workspace = true, features = ["from"] }
 thiserror.workspace = true
 pg-basics.workspace = true
 pg-elog.workspace = true
