Re-added tuple combinators that can be enabled via tuple_combinators feature.

--- a/parser/combinators/Cargo.toml
+++ b/parser/combinators/Cargo.toml
@@ -13,3 +13,7 @@ pg-parser-core.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
+
+[features]
+default = []
+tuple_combinators = []
