--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ thiserror = "2"
 
 pg-ast = { path = "parser/ast" }
 pg-basics = { path = "basics" }
-pg-combinators = { path = "parser/combinators" }
+pg-combinators = { path = "parser/combinators", features = [] }
 pg-elog = { path = "elog" }
 pg-guc = { path = "guc" }
 pg-lexer = { path = "parser/lexer" }
