--- a/parser/identifier-combinators/Cargo.toml
+++ b/parser/identifier-combinators/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pg-parser"
+name = "pg-identifier-combinators"
 edition.workspace = true
 version.workspace = true
 
@@ -7,15 +7,9 @@ version.workspace = true
 workspace = true
 
 [dependencies]
-derive_more = { workspace = true, features = ["from"] }
 pg-ast.workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
-pg-identifier-combinators.workspace = true
 pg-elog.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
-
-[dev-dependencies]
-assert_matches.workspace = true
-test-case.workspace = true
