--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -11,10 +11,11 @@ derive_more = { workspace = true, features = ["from"] }
 pg-ast.workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
-pg-sink-combinators.workspace = true
 pg-elog.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
+pg-sink-ast.workspace = true
+pg-sink-combinators.workspace = true
 
 [dev-dependencies]
 assert_matches.workspace = true
