--- a/parser/sink-combinators/Cargo.toml
+++ b/parser/sink-combinators/Cargo.toml
@@ -7,12 +7,12 @@ version.workspace = true
 workspace = true
 
 [dependencies]
-pg-ast.workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
 pg-elog.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
+pg-sink-ast.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
