--- a/parser/generic-set-ast/Cargo.toml
+++ b/parser/generic-set-ast/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pg-ast"
+name = "pg-generic-set-ast"
 edition.workspace = true
 version.workspace = true
 
@@ -7,8 +7,6 @@ version.workspace = true
 workspace = true
 
 [dependencies]
-derive_more = { workspace = true, features = ["from", "display", "error"] }
+derive_more = { workspace = true, features = ["from"]}
 pg-basics.workspace = true
-pg-elog.workspace = true
-pg-generic-set-ast.workspace = true
 pg-sink-ast.workspace = true
