--- a/parser/generic-set-combinators/Cargo.toml
+++ b/parser/generic-set-combinators/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pg-parser"
+name = "pg-generic-set-combinators"
 edition.workspace = true
 version.workspace = true
 
@@ -7,17 +7,13 @@ version.workspace = true
 workspace = true
 
 [dependencies]
-derive_more = { workspace = true, features = ["from"] }
-pg-ast.workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
-pg-elog.workspace = true
-pg-generic-set-combinators.workspace = true
+pg-generic-set-ast.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
 pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
 
 [dev-dependencies]
-assert_matches.workspace = true
 test-case.workspace = true
