Moved generic_reset to pg-generic-set-combinators. Moved OneOrAll to pg-sink-ast. Added graph (re)generation to Rake.

--- a/scripts/Rakefile
+++ b/scripts/Rakefile
@@ -85,6 +85,16 @@ namespace :gen do
 end
 
 ###############################################################################
+# graph
+###############################################################################
+
+task :graph do
+  require_relative 'grammar/graph.rb'
+  graph_output = Pathname(__dir__) / 'grammar/grammar-graph.dot'
+  graph = Graph.run!(output: graph_output)
+end
+
+###############################################################################
 # Top-level tasks
 ###############################################################################
 
