--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -12,3 +12,4 @@ pg-basics.workspace = true
 pg-elog.workspace = true
 pg-generic-set-ast.workspace = true
 pg-sink-ast.workspace = true
+pg-transaction-mode-ast.workspace = true
