--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -11,5 +11,6 @@ derive_more = { workspace = true, features = ["from", "display", "error"] }
 pg-basics.workspace = true
 pg-elog.workspace = true
 pg-generic-set-ast.workspace = true
+pg-interval-ast.workspace = true
 pg-sink-ast.workspace = true
 pg-transaction-mode-ast.workspace = true
