--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -13,6 +13,8 @@ pg-basics.workspace = true
 pg-combinators.workspace = true
 pg-elog.workspace = true
 pg-generic-set-combinators.workspace = true
+pg-interval-ast.workspace = true
+pg-interval-combinators.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
 pg-sink-ast.workspace = true
