--- a/parser/combinators/Cargo.toml
+++ b/parser/combinators/Cargo.toml
@@ -7,6 +7,8 @@ version.workspace = true
 workspace = true
 
 [dependencies]
+derive_more = { workspace = true, features = ["debug"] }
+pg-ast.workspace = true
 pg-basics.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
