--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -21,6 +21,7 @@ pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
 pg-transaction-mode-ast.workspace = true
 pg-transaction-mode-combinators.workspace = true
+pg-type-combinators.workspace = true
 
 [dev-dependencies]
 assert_matches.workspace = true
