--- a/parser/type-combinators/Cargo.toml
+++ b/parser/type-combinators/Cargo.toml
@@ -7,10 +7,15 @@ version.workspace = true
 workspace = true
 
 [dependencies]
+pg-ast.workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
+pg-elog.workspace = true
+pg-interval-ast.workspace = true
+pg-interval-combinators.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
+pg-sink-combinators.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
