--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -19,8 +19,8 @@ pg-lexer.workspace = true
 pg-parser-core.workspace = true
 pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
-pg-transaction-mode-ast.workspace = true
-pg-transaction-mode-combinators.workspace = true
+pg-transaction-stmt-ast.workspace = true
+pg-transaction-stmt-combinators.workspace = true
 pg-type-combinators.workspace = true
 
 [dev-dependencies]
