Moved generic options to new generic-option-combinators crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "parser/ast",
     "parser/combinators",
     "parser/core",
+    "parser/generic-options-combinators",
     "parser/generic-set-ast",
     "parser/generic-set-combinators",
     "parser/interval-ast",
@@ -48,6 +49,7 @@ pg-ast = { path = "parser/ast" }
 pg-basics = { path = "basics" }
 pg-combinators = { path = "parser/combinators", features = [] }
 pg-elog = { path = "elog" }
+pg-generic-options-combinators = { path = "parser/generic-options-combinators" }
 pg-generic-set-ast = { path = "parser/generic-set-ast" }
 pg-generic-set-combinators = { path = "parser/generic-set-combinators" }
 pg-guc = { path = "guc" }
