Moved alter_collation_stmt to new crate pg-collation-stmt.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "elog",
     "guc",
     "parser/ast",
+    "parser/collation-stmt",
     "parser/combinators",
     "parser/core",
     "parser/generic-options-combinators",
@@ -47,6 +48,7 @@ test-case = "3"
 
 pg-ast = { path = "parser/ast" }
 pg-basics = { path = "basics" }
+pg-collation-stmt = { path = "parser/collation-stmt" }
 pg-combinators = { path = "parser/combinators", features = [] }
 pg-elog = { path = "elog" }
 pg-generic-options-combinators = { path = "parser/generic-options-combinators" }
