--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 derive_more = { workspace = true, features = ["from"] }
 pg-ast.workspace = true
 pg-basics.workspace = true
+pg-collation-stmt.workspace = true
 pg-combinators.workspace = true
 pg-elog.workspace = true
 pg-generic-options-combinators.workspace = true
