--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -14,6 +14,7 @@ pg-collation-stmt.workspace = true
 pg-combinators.workspace = true
 pg-conversion-stmt.workspace = true
 pg-elog.workspace = true
+pg-event-trigger-stmt.workspace = true
 pg-generic-options-combinators.workspace = true
 pg-generic-set-combinators.workspace = true
 pg-interval-ast.workspace = true
