--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -20,6 +20,7 @@ pg-generic-set-combinators.workspace = true
 pg-interval-ast.workspace = true
 pg-interval-combinators.workspace = true
 pg-language-stmt.workspace = true
+pg-large-object-stmt.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
 pg-sink-ast.workspace = true
