--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "parser/parser",
     "parser/sink-ast",
     "parser/sink-combinators",
+    "parser/system-stmt",
     "parser/transaction-stmt-ast",
     "parser/transaction-stmt-combinators",
     "parser/type-combinators",
@@ -70,6 +71,7 @@ pg-parser = { path = "parser/parser" }
 pg-parser-core = { path = "parser/core" }
 pg-sink-ast = { path = "parser/sink-ast" }
 pg-sink-combinators = { path = "parser/sink-combinators" }
+pg-system-stmt = { path = "parser/system-stmt" }
 pg-transaction-stmt-ast = { path = "parser/transaction-stmt-ast" }
 pg-transaction-stmt-combinators = { path = "parser/transaction-stmt-combinators" }
 pg-type-combinators = { path = "parser/type-combinators" }
