Renamed pg-transaction-stmt-combinators to pg-transaction-stmt.

--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -27,7 +27,7 @@ pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
 pg-system-stmt.workspace = true
 pg-transaction-stmt-ast.workspace = true
-pg-transaction-stmt-combinators.workspace = true
+pg-transaction-stmt.workspace = true
 pg-type-combinators.workspace = true
 
 [dev-dependencies]
