--- a/parser/transaction-stmt/Cargo.toml
+++ b/parser/transaction-stmt/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pg-transaction-stmt-combinators"
+name = "pg-transaction-stmt"
 edition.workspace = true
 version.workspace = true
 
