Move alter_role_options, auth_ident, and create_role_options to pg-role-stmt. Move AlterRoleOption, CreateRoleOption, and RoleKind to pg-role-ast. Fixed bug with Create Role, where options weren't optional.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ members = [
     "parser/large-object-stmt",
     "parser/lexer",
     "parser/parser",
+    "parser/role-ast",
+    "parser/role-stmt",
     "parser/sink-ast",
     "parser/sink-combinators",
     "parser/system-stmt",
@@ -71,6 +73,8 @@ pg-large-object-stmt = { path = "parser/large-object-stmt" }
 pg-lexer = { path = "parser/lexer" }
 pg-parser = { path = "parser/parser" }
 pg-parser-core = { path = "parser/core" }
+pg-role-ast = { path = "parser/role-ast" }
+pg-role-stmt = { path = "parser/role-stmt" }
 pg-sink-ast = { path = "parser/sink-ast" }
 pg-sink-combinators = { path = "parser/sink-combinators" }
 pg-system-stmt = { path = "parser/system-stmt" }
