--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -12,6 +12,7 @@ pg-basics.workspace = true
 pg-elog.workspace = true
 pg-generic-set-ast.workspace = true
 pg-interval-ast.workspace = true
+pg-role-ast.workspace = true
 pg-sink-ast.workspace = true
 pg-transaction-stmt-ast.workspace = true
 pg-xml-ast.workspace = true
