--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -23,6 +23,8 @@ pg-language-stmt.workspace = true
 pg-large-object-stmt.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
+pg-role-ast.workspace = true
+pg-role-stmt.workspace = true
 pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
 pg-system-stmt.workspace = true
