--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -16,6 +16,7 @@ pg-conversion-stmt.workspace = true
 pg-elog.workspace = true
 pg-event-trigger-stmt.workspace = true
 pg-generic-options-combinators.workspace = true
+pg-generic-set-ast.workspace = true
 pg-generic-set-combinators.workspace = true
 pg-interval-ast.workspace = true
 pg-interval-combinators.workspace = true
