--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -15,6 +15,7 @@ pg-combinators.workspace = true
 pg-conversion-stmt.workspace = true
 pg-elog.workspace = true
 pg-event-trigger-stmt.workspace = true
+pg-generic-options-ast.workspace = true
 pg-generic-options-combinators.workspace = true
 pg-generic-set-ast.workspace = true
 pg-generic-set-combinators.workspace = true
