Move AlterRoleSetStmt, AlterRoleStmt, AlterUserMappingStmt, CreateRoleStmt, and CreateUserMappingStmt to pg-role-ast.

--- a/parser/role-ast/Cargo.toml
+++ b/parser/role-ast/Cargo.toml
@@ -8,4 +8,6 @@ workspace = true
 
 [dependencies]
 pg-basics.workspace = true
+pg-generic-options-ast.workspace = true
+pg-generic-set-ast.workspace = true
 pg-sink-ast.workspace = true
