--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -25,7 +25,6 @@ pg-language-stmt.workspace = true
 pg-large-object-stmt.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
-pg-reset-stmt.workspace = true
 pg-role-ast.workspace = true
 pg-role-stmt.workspace = true
 pg-sink-ast.workspace = true
@@ -34,6 +33,7 @@ pg-system-stmt.workspace = true
 pg-transaction-stmt-ast.workspace = true
 pg-transaction-stmt.workspace = true
 pg-type-combinators.workspace = true
+pg-variable-stmt.workspace = true
 pg-xml-ast.workspace = true
 pg-xml-combinators.workspace = true
 
