--- a/parser/variable-stmt/Cargo.toml
+++ b/parser/variable-stmt/Cargo.toml
@@ -9,7 +9,19 @@ workspace = true
 [dependencies]
 pg-basics.workspace = true
 pg-combinators.workspace = true
+pg-elog.workspace = true
 pg-generic-set-ast.workspace = true
 pg-generic-set-combinators.workspace = true
+pg-interval-ast.workspace = true
+pg-interval-combinators.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
+pg-sink-ast.workspace = true
+pg-sink-combinators.workspace = true
+pg-transaction-stmt.workspace = true
+pg-xml-combinators.workspace = true
+
+[dev-dependencies]
+test-case.workspace = true
+pg-transaction-stmt-ast.workspace = true
+pg-xml-ast.workspace = true
