--- a/parser/role-stmt/Cargo.toml
+++ b/parser/role-stmt/Cargo.toml
@@ -10,11 +10,16 @@ workspace = true
 pg-basics.workspace = true
 pg-combinators.workspace = true
 pg-elog.workspace = true
+pg-generic-options-ast.workspace = true
+pg-generic-options-combinators.workspace = true
+pg-generic-set-ast.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
 pg-role-ast.workspace = true
 pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
+pg-variable-stmt.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
+pg-transaction-stmt-ast.workspace = true
