Moved CreateDatabaseStmt, and associated structs and enums to pg-database-stmt-ast.

--- a/parser/ast/Cargo.toml
+++ b/parser/ast/Cargo.toml
@@ -9,8 +9,8 @@ workspace = true
 [dependencies]
 derive_more = { workspace = true, features = ["from", "display", "error"] }
 pg-basics.workspace = true
+pg-database-stmt-ast.workspace = true
 pg-elog.workspace = true
-pg-generic-options-ast.workspace = true
 pg-generic-set-ast.workspace = true
 pg-interval-ast.workspace = true
 pg-role-ast.workspace = true
