--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -13,10 +13,9 @@ pg-basics.workspace = true
 pg-collation-stmt.workspace = true
 pg-combinators.workspace = true
 pg-conversion-stmt.workspace = true
+pg-database-stmt-ast.workspace = true
 pg-elog.workspace = true
 pg-event-trigger-stmt.workspace = true
-pg-generic-options-ast.workspace = true
-pg-generic-options-combinators.workspace = true
 pg-generic-set-ast.workspace = true
 pg-generic-set-combinators.workspace = true
 pg-interval-ast.workspace = true
@@ -25,7 +24,6 @@ pg-language-stmt.workspace = true
 pg-large-object-stmt.workspace = true
 pg-lexer.workspace = true
 pg-parser-core.workspace = true
-pg-role-ast.workspace = true
 pg-role-stmt.workspace = true
 pg-sink-ast.workspace = true
 pg-sink-combinators.workspace = true
